[package]
name = "cyberphage-wasm"
version = "0.1.0"
authors = ["Steven Portzer <stevenportzer@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.cyberphage]
path = ".."
default-features = false

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
